--- a/src/content/graphos/routing/defer.mdx
+++ b/src/content/graphos/routing/defer.mdx
@@ -1,9 +1,9 @@
 ---
-title: Deferring field data with GraphOS
+title: Deferring query response data with GraphOS
 description: Using the @defer directive
 ---
 
-With GraphOS, your supergraph's router can **defer** the delivery of certain schema fields to a querying client. This enables the client to receive _non_-deferred data more quickly, because the router can split its response into multiple parts as data becomes available:
+With GraphOS, your supergraph's router can **defer** returning data for certain fields in your schema. This enables a querying client to receive _non_-deferred data more quickly, because the router can return it _immediately_ instead of waiting for _all_ response data to be ready:
 
 ```mermaid
 sequenceDiagram
@@ -14,11 +14,67 @@ sequenceDiagram
   Router->>Client: Returns data for<br/> deferred fields
 ```
 
-## How deferring works
+Both [cloud supergraphs](../graphs/overview/#cloud-supergraphs) and [self-hosted supergraphs](../graphs/overview/#self-hosted-supergraphs) support deferring fields with the router. Additionally, this feature is compatible with all [supported subgraph libraries](/federation/building-supergraphs/supported-subgraphs), because the logic resides entirely within the router!
 
-Your router supports deferring fields of the special object types in your subgraph schemas called [**entities**](/federation/entities/).
+## How do I defer fields in a query?
 
-Entities are types that usually define their fields across _multiple_ subgraph schemas. You can identify an entity by its use of the `@key` directive. In the example subgraph schemas below, the `Product` type is an entity:
+> ⚠️ **Deferring query fields requires a defer-compatible client library.** These libraries support receiving query data incrementally via multipart HTTP responses.
+>
+> Defer support is currently available in Apollo Client for [Web](/react/data/defer) (preview) and [Kotlin](/docs/kotlin/fetching/defer) (experimental).
+
+If you're using a defer-compatible client, you apply the `@defer` directive to fragments in your queries to specify which fields you want to defer:
+
+```graphql
+query GetTopProductsAndReviews {
+  topProducts {
+    id
+    name
+    # highlight-start
+    # You always apply @defer to a fragment, not to individual fields
+    ... @defer { 
+      reviews { #highlight-line
+        score
+      }
+    }
+    # highlight-end
+  }
+}
+```
+
+When your supergraph's router receives this query, it defers every field in these fragments **[that it's able to](#which-fields-can-my-router-defer)**.
+
+## Which fields can my router defer?
+
+Your supergraph's router can defer the following fields in your schema:
+
+- Fields of any **entity** type (along with their subfields)
+    - Deferring entity fields is extremely powerful but requires some setup if you aren't using entities already. This is covered in more detail [below](#deferring-entity-fields).
+- Root fields of the `Query` type (along with their subfields)
+    - This use case is comparatively straightforward:
+        ```graphql
+        # With this query, the router first returns a list of User IDs, 
+        # then later completes the response with a list of Product IDs
+        query GetUsersAndDeferProducts {
+          users {
+            id
+          }
+          # highlight-start
+          ... @defer {
+            products {
+              id
+            }
+          }
+          # highlight-end
+        }
+        ```
+
+> To learn more about _why_ your router can defer these specific fields and not others, see the [Apollo Router documentation](/router/executing-operations/defer-support/).
+
+## Deferring entity fields
+
+Your router supports deferring fields of the special object types in your supergraph called [**entities**](/federation/entities/).
+
+Entities are object types that often define their fields across _multiple_ subgraphs (but they don't have to). You can identify an entity by its use of the `@key` directive. In the example subgraph schemas below, the `Product` type is an entity:
 
 <CodeColumns>
 
@@ -44,58 +100,22 @@ type Product @key(fields: "id") {
 type Review {
   score: Int!
 }
-````
+```
 
 </CodeColumns>
 
-Because entities usually define their fields across multiple subgraphs, the router usually needs to _query_ multiple subgraphs to fully resolve an entity.
+Entities are query entry points into your subgraphs, and this is what enables your router to defer their fields: the router can send a _followup_ query to a subgraph to fetch any entity fields that it doesn't fetch initially.
 
-Consider this query:
-
-```graphql {2,5}
-query GetTopProductsAndReviews {
-  topProducts { # Resolved by Products subgraph
-    id
-    name
-    reviews {   # Resolved by Reviews subgraph
-      score
-    }
-  }
-}
-```
-
-To resolve all of these fields, the router needs to query both the Products subgraph _and_ the Reviews subgraph. Not only that, but the router specifically needs to query the Products subgraph _first_, so that it knows _which_ products to fetch reviews for.
-
-When the router receives this query, it automatically generates a sequence of "sub-queries" that it can run on its subgraphs to resolve all requested fields. This sequence is known as a [**query plan**](/federation/query-plans/).
-
-Here's a visualization of the query plan for the example query:
-
-```mermaid
-flowchart LR;
-  fetchProducts("<code>Fetch (products)</code>");
-  fetchProducts --> fetchReviews("<code>Fetch (reviews)</code>");
-  fetchReviews --> flatten("<code>Flatten (topProducts,[],reviews)</code>")
-  class flatten tertiary;
-```
-
-This query plan has three steps:
-
-1. The router queries the Products subgraph and retrieves the `id` and `name` of each top product.
-2. The router queries the Reviews subgraph, _providing the `id` of each top product_, and retrieves corresponding review information for those products.
-3. The router combines the data from the two sub-queries into a single response for the client.
-
-Because the second sub-query depends on data from the first, they must occur serially. But the result of the _first_ sub-query includes a meaningful portion of the data that the client requested. So to improve responsiveness, the router could theoretically return that portion as soon as it's available!
-
-A client can request exactly this behavior by including the `@defer` directive in their query:
+Here's an example query that defers entity fields using the subgraphs above:
 
 ```graphql
-query GetTopProductsAndReviews {
+query GetProductsAndDeferReviews {
   topProducts {
     id
     name
     # highlight-start
     ... @defer {
-      reviews { #highlight-line
+      reviews {
         score
       }
     }
@@ -104,69 +124,22 @@ query GetTopProductsAndReviews {
 }
 ```
 
-> As shown, `@defer` is always applied to a **GraphQL fragment** that contains the deferred fields. You _don't_ apply `@defer` directly to individual fields. 
+To handle this query, the router first resolves and returns a list of `Product` objects with their IDs and names. Later, the router completes the response by returning review scores for each of those products.
 
-With the above query, the router understands that it _can_ return the result of its first sub-query as soon as its available, instead of waiting for the result of the _second_ sub-query. Later, it returns the result of the second sub-query when it's ready.
+> It doesn't matter _which_ subgraph defines a particular entity field! Queries can defer entity fields that are defined across any number of different subgraphs.
 
-**The router can defer the `Product.reviews` field specifically because it's a field of an entity.** An entity serves as a direct entry point into each subgraph that defines it. This means that the router can always execute a followup query to fetch any entity fields that it initially defers.
+### Defining entities in your subgraphs
 
-### Deferring within a single subgraph
+If your subgraphs don't yet include any entities, you need to define some before clients can start deferring their fields in queries.
 
-In the previous example, a client defers entity fields that happen to _already_ require executing multiple sub-queries. But what if all of a client query's fields belong to a _single_ subgraph?
+To learn about creating entities, see [this article](/federation/entities/).
 
-Consider this client query:
-
-```graphql
-query GetTopProducts {
-  topProducts { # All fields resolved by Products subgraph
-    id
-    name
-    price
-  }
-}
-```
-
-Because all of these requested fields are defined in a single subgraph, by default the router generates the most basic possible query plan, with a single step:
-
-```mermaid
-flowchart LR;
-  fetchProducts("<code>Fetch (products)</code>");
-```
-
-Now, let's imagine that the `Product.price` field takes significantly longer to resolve than other `Product` fields, and a querying client wants to defer it like so:
-
-```graphql
-query GetTopProducts {
-  topProducts {
-    id
-    name
-    # highlight-start
-    ... @defer {
-      price @defer
-    }
-    # highlight-end
-  }
-}
-```
-
-**This is valid!** When the router sees this defer request, it generates a _different_ query plan for the query:
-
-```mermaid
-flowchart LR;
-  fetchProducts("<code>Fetch (products)</code>");
-  fetchProducts --> fetchProductsAgain("<code>Fetch (products)</code>");
-  fetchProductsAgain --> flatten("<code>Flatten (topProducts,[],price)</code>")
-  class flatten tertiary;
-```
-
-Now, the router queries _the same subgraph twice_, first to fetch non-deferred fields and then to fetch the deferred fields. When the _first_ sub-query returns, the router can immediately return each product's `id` and `name` to the client while sending a followup sub-query to fetch `price` information.
-
-## Requirements
+## All requirements for `@defer`
 
 For a client to be able to defer entity fields in your supergraph, _all_ of the following are required:
 
 - The client must support receiving deferred query responses as multipart HTTP responses.
-  - This functionality is currently supported in [Apollo Client](/react/data/defer) (preview) and [Apollo Kotlin](/docs/kotlin/fetching/defer) (experimental).
+  - This functionality is currently supported in Apollo Client for [Web](/react/data/defer) (preview) and [Kotlin](/docs/kotlin/fetching/defer) (experimental).
 - Your supergraph must be one of:
   - A [cloud supergraph](../graphs/overview#cloud-supergraphs)
   - A [self-hosted supergraph](../graphs/overview/#self-hosted-supergraphs) running the [Apollo Router](/router/)
